# inkrypto

./: .vale.ini  Cargo.toml  Makefile  README.md  rust-toolchain.toml
.cargo/: config.toml
2pc-mpc/: Cargo.toml
2pc-mpc/src/: decentralized_party.rs  dkg.rs  ecdsa.rs  languages.rs  lib.rs  presign.rs  schnorr.rs  sign.rs
2pc-mpc/src/decentralized_party/: dkg.rs  reconfiguration.rs  reconfiguration_v1_to_v2.rs
2pc-mpc/src/decentralized_party/dkg/: first_round.rs  fourth_round.rs  public_output.rs  second_round.rs  third_round.rs
2pc-mpc/src/decentralized_party/reconfiguration/: first_round.rs  fourth_round.rs  public_output.rs  second_round.rs  third_round.rs
2pc-mpc/src/dkg/: centralized_party.rs  class_groups.rs  decentralized_party.rs  encryption_of_secret_key_share.rs  paillier.rs
2pc-mpc/src/dkg/centralized_party/: trusted_dealer.rs
2pc-mpc/src/dkg/decentralized_party/: class_groups.rs  encryption_of_secret_key_share_round.rs  proof_verification_round.rs  trusted_dealer.rs
2pc-mpc/src/dkg/encryption_of_secret_key_share/: class_groups.rs
2pc-mpc/src/ecdsa/: presign.rs  sign.rs
2pc-mpc/src/ecdsa/presign/: class_groups.rs  decentralized_party.rs
2pc-mpc/src/ecdsa/sign/: centralized_party.rs  class_groups.rs  decentralized_party.rs
2pc-mpc/src/languages/: class_groups.rs  paillier.rs
2pc-mpc/src/presign/: class_groups.rs  decentralized_party.rs  paillier.rs
2pc-mpc/src/presign/decentralized_party/: class_groups.rs  encryption_of_mask_and_masked_key_share_round.rs  nonce_public_share_and_encryption_of_masked_nonce_round.rs  paillier.rs
2pc-mpc/src/schnorr/: presign.rs  sign.rs
2pc-mpc/src/schnorr/presign/: class_groups.rs  decentralized_party.rs
2pc-mpc/src/schnorr/sign/: centralized_party.rs  class_groups.rs  decentralized_party.rs
2pc-mpc/src/sign/: class_groups.rs  decentralized_party.rs  paillier.rs
2pc-mpc/src/sign/centralized_party/: message.rs  signature_homomorphic_evaluation_round.rs  signature_verification_round.rs
2pc-mpc/src/sign/decentralized_party/: class_groups.rs  paillier.rs  signature_partial_decryption_round.rs  signature_threshold_decryption_round.rs
2pc-mpc/tests/: dkg.rs  presign.rs  sign.rs
2pc-mpc/tests/common/: mod.rs
class-groups/: Cargo.toml
class-groups/benches/: benches.rs
class-groups/src/: accelerator.rs  decryption_key.rs  decryption_key_share.rs  discriminant.rs  dkg.rs  encryption_key.rs  equivalence_class.rs  helpers.rs  ibqf.rs  lib.rs  parameters.rs  publicly_verifiable_secret_sharing.rs  randomizer.rs  reconfiguration.rs  setup.rs
class-groups/src/dkg/: first_round.rs  fourth_round.rs  party.rs  proofs.rs  public_output.rs  second_round.rs  third_round.rs
class-groups/src/encryption_key/: public_parameters.rs
class-groups/src/equivalence_class/: group_element.rs  public_parameters.rs  traits.rs
class-groups/src/helpers/: binxgcd.rs  extension.rs  limbs.rs  lookup.rs  math.rs  matrix.rs  partial_xgcd.rs  tools.rs  vartime_div.rs  vartime_mul.rs
class-groups/src/ibqf/: accelerator.rs  compact.rs  math.rs  nucomp.rs  nudupl.rs  nupow.rs  traits.rs  unreduced.rs
class-groups/src/ibqf/accelerator/: jsf.rs
class-groups/src/publicly_verifiable_secret_sharing/: chinese_remainder_theorem.rs  deal_shares.rs  party.rs  test_consts.rs  verify_shares.rs
class-groups/src/reconfiguration/: first_round.rs  fourth_round.rs  party.rs  public_output.rs  second_round.rs  third_round.rs
commitment/: Cargo.toml
commitment/src/: lib.rs  multipedersen.rs  pedersen.rs
commitment/tests/: commitment.rs  halborn.rs
enhanced-maurer/: Cargo.toml
enhanced-maurer/benches/: benches.rs
enhanced-maurer/src/: aggregation.rs  committed_linear_evaluation.rs  encryption_of_discrete_log.rs  encryption_of_tuple.rs  extended_encryption_of_tuple.rs  language.rs  lib.rs  proof.rs  scaling_of_discrete_log.rs
enhanced-maurer/src/aggregation/: commitment_round.rs  decommitment_round.rs  proof_aggregation_round.rs  proof_share_round.rs
group/: Cargo.toml
group/benches/: benches.rs
group/src/: additive.rs  bounded_integers_group.rs  bounded_natural_numbers_group.rs  const_additive.rs  csrng.rs  curve25519.rs  direct_product.rs  hash_to_scalar.rs  helpers.rs  lib.rs  linear_combination.rs  reduce.rs  ristretto.rs  scalar.rs  secp256k1.rs  secp256r1.rs  self_product.rs  transcription.rs
group/src/helpers/: const_generic_array_serialization.rs
group/src/ristretto/: group_element.rs  scalar.rs
group/src/secp256k1/: group_element.rs  scalar.rs
group/src/secp256r1/: group_element.rs  scalar.rs
group/tests/: group.rs  halborn.rs
homomorphic-encryption/: Cargo.toml
homomorphic-encryption/src/: lib.rs
maurer/: Cargo.toml
maurer/benches/: benches.rs
maurer/src/: aggregation.rs  commitment_of_discrete_log.rs  committed_linear_evaluation.rs  discrete_log_ratio_of_committed_values.rs  encryption_of_discrete_log.rs  encryption_of_tuple.rs  equality_between_commitments_with_different_public_parameters.rs  equality_of_discrete_logs.rs  extended_encryption_of_tuple.rs  knowledge_of_decommitment.rs  knowledge_of_discrete_log.rs  language.rs  lib.rs  proof.rs  scaling_of_discrete_log.rs  vector_commitment_of_discrete_log.rs
maurer/src/aggregation/: commitment_round.rs  decommitment_round.rs  proof_aggregation_round.rs  proof_share_round.rs
maurer/src/proof/: fischlin.rs
maurer/tests/: halborn.rs  maurer.rs
mpc/: Cargo.toml
mpc/src/: access_structure.rs  lib.rs  party.rs  secret_sharing.rs  two_party.rs
mpc/src/access_structure/: weighted.rs
mpc/src/party/: guaranteed_output_delivery.rs
mpc/src/secret_sharing/: shamir.rs
proof/: Cargo.toml
proof/src/: aggregation.rs  lib.rs  range.rs  transcript_protocol.rs
proof/src/aggregation/: asynchronous.rs  synchronous.rs
proof/src/range/: bulletproofs.rs
tiresias/: Cargo.toml
tiresias/benches/: benches.rs
tiresias/src/: batch_verification.rs  decryption_key.rs  decryption_key_share.rs  encryption_key.rs  error.rs  group.rs  lib.rs  proofs.rs
tiresias/src/group/: multiplicative.rs
tiresias/src/proofs/: equality_of_discrete_logs.rs
(+62 files in other folders)
