[workspace]
resolver = "2"

members = [
    "group",
    "commitment",
    "proof",
    "homomorphic-encryption",
    "mpc",
    "enhanced-maurer",
    "maurer",
    "tiresias",
    "2pc-mpc",
    "class-groups",
]

exclude = []

[workspace.package]
authors = ["dWallet Labs Ltd. <dev@dwalletlabs.com>"]
description = "dWallet Labs LTD. Cryptography Library."
edition = "2021"
license = "CC-BY-NC-ND-4.0"
repository = "https://github.com/dwallet-labs/inkrypto"
version = "0.1.0"

[workspace.dependencies]
bulletproofs = { git = "https://github.com/ycscaly/bulletproofs.git", rev = "14adca03", default-features = false }
crypto-bigint = { version = "0.7.0-pre.6", default-features = false, features = ["serde"] }
merlin = { version = "3", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false }
thiserror = "2.0"
subtle = { version = "2.5" }
gcd = { version = "2.3.0" }
crypto-primes = { version = "0.7.0-pre.1", default-features = false }
rayon = { version = "1.10.0" }
rand_core = { version = "0.9", default-features = false }
rstest = "0.26"
rand = { version = "0.9", default-features = false }
rand_chacha = { version = "0.9", default-features = false }
curve25519-dalek = { version = "5.0.0-pre.0", features = ["rand_core"] }
criterion = { version = "0.6", default-features = false }
getrandom = { version = "0.3" }
k256 = { version = "0.14.0-pre.9", default-features = false }
hash2curve = { version = "0.14.0-rc.0" }
sha3 = "^0.11.0-rc.0"
ecdsa = { version = "0.17.0-rc.4" }
itertools = "0.14.0"
bcs = "0.1"

[patch.crates-io]
crypto-bigint = { git = 'https://github.com/erik-3milabs/crypto-bigint.git', rev = 'd0929d4' }
