[workspace]
resolver = "2"

members = [
    "group",
    "commitment",
    "proof",
    "homomorphic-encryption",
    "mpc",
    "enhanced-maurer",
    "maurer",
    "tiresias",
    "2pc-mpc",
    "class-groups",
]

exclude = []

[workspace.package]
authors = ["dWallet Labs Ltd. <dev@dwalletlabs.com>"]
description = "dWallet Labs LTD. Cryptography Library."
edition = "2021"
license = "CC-BY-NC-ND-4.0"
repository = "https://github.com/dwallet-labs/inkrypto"
version = "0.1.0"

[workspace.dependencies]
bulletproofs = { git = "https://github.com/ycscaly/bulletproofs.git", rev = "738c572f", default-features = false }
crypto-bigint = { version = "0.7.0-pre.9", default-features = false, features = ["serde"] }
merlin = { version = "3", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false }
thiserror = "2.0"
subtle = { version = "2.5" }
gcd = { version = "2.3.0" }
crypto-primes = { version = "0.7.0-pre.3", default-features = false }
rayon = { version = "1.11.0" }
rand_core = { version = "0.9", default-features = false }
rstest = "0.26"
rand = { version = "0.9", default-features = false }
rand_chacha = { version = "0.9", default-features = false }
curve25519-dalek = { version = "5.0.0-pre.1", features = ["rand_core"] }
criterion = { version = "0.7", default-features = false }
getrandom = { version = "0.3" }
k256 = { version = "0.14.0-pre.11", default-features = false }
p256 = { version = "0.14.0-pre.11", default-features = false }
hash2curve = { version = "0.14.0-rc.2" }
sha2 = "0.11.0-rc.2"
sha3 = "0.11.0-rc.3"
ecdsa = { version = "0.17.0-rc.7" }
itertools = "0.14.0"
bcs = "0.1"
ed25519 = { version = "3.0.0-rc.1", default-features = false }
ed25519-dalek = { version = "3.0.0-pre.1", default-features = false }
schnorrkel = { version = "0.11", default-features = false }

[patch.crates-io]
crypto-bigint = { git = 'https://github.com/ycscaly/crypto-bigint.git', rev = '8aabcee5' }
