[package]
name = "class_groups"
version = "0.1.0"
edition = "2021"
license = "CC-BY-NC-ND-4.0"
authors = ["dWallet Labs Ltd. <dev@dwalletlabs.com>"]

[lib]

[dependencies]
criterion = { workspace = true, optional = true }
crypto-bigint = { workspace = true, features = ["serde"] }
crypto-primes = { workspace = true }
merlin = { workspace = true, default-features = false }
group = { path = "../group" }
commitment = { path = "../commitment" }
proof = { path = "../proof" }
homomorphic_encryption = { path = "../homomorphic-encryption" }
mpc = { path = "../mpc" }
maurer = { path = "../maurer", optional = true }
rand = { workspace = true, default-features = false }
rand_chacha = { workspace = true, default-features = false }
rstest = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
sha3 = { workspace = true }
thiserror = { workspace = true }
itertools = { workspace = true }
rayon = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true  }

[dev-dependencies]
group = { path = "../group", features = ["os_rng"] }
criterion = { workspace = true }
rstest = { workspace = true }
mpc = { path = "../mpc", features = ["test_helpers"] }
homomorphic_encryption = { path = "../homomorphic-encryption", features = ["test_helpers"] }
serde_json = { workspace = true }
rayon = { workspace = true }

[features]
# As a default, we should only decrypt ciphertext for which we verified a zk-proof,
# which guarantees the ciphertext was well-constructed and randmoized,
# and as such it is safe to use the "randomized_decryption" feature.
default = ["randomized_decryption"]

randomized_decryption = []
threshold = ["dep:maurer"]

parallel = ["dep:rayon", "mpc/parallel", "proof/parallel", "maurer/parallel"]
test_helpers = ["group/os_rng", "dep:criterion", "dep:rstest", "dep:serde_json", "mpc/test_helpers", "mpc/parallel", "homomorphic_encryption/test_helpers"]
benchmarking = ["test_helpers", "mpc/parallel", "threshold", "dep:rayon"]

[[bench]]
name = "benches"
harness = false
