[package]
name = "commitment"
version = "0.1.0"
edition = "2021"
license = "CC-BY-NC-ND-4.0"

[dependencies]
group = { path = "../group" }
crypto-bigint = { workspace = true }
serde = { workspace = true }
merlin = { workspace = true, default-features = false  }
thiserror = { workspace = true }

[dev-dependencies]
bulletproofs = { workspace = true }
subtle = { workspace = true, features = ["const-generics"] }
group = { path = "../group", features = ["os_rng", "test_helpers"] }
serde_json = { workspace = true, default-features = false, features = ["alloc"] }

[features]
test_helpers = ["group/os_rng"]


