[package]
name = "group"
version = "0.1.0"
edition = "2021"
license = "CC-BY-NC-ND-4.0"

[dependencies]
crypto-bigint = { workspace = true, features = ["rand_core", "serde"], default-features = false }
serde = { workspace = true, features = ["derive"] }
subtle = { workspace = true, features = ["const-generics"] }
subtle-ng = { workspace = true }
thiserror = { workspace = true }
k256 = { workspace = true, features = ["arithmetic", "critical-section", "precomputed-tables", "serde", "hash2curve", "alloc"], default-features = false }
curve25519-dalek = { workspace = true, features = ["u64_backend", "serde"] }
sha3_old = { workspace = true }
sha3 = { workspace = true }
itertools = { workspace = true }
rayon = { workspace = true, optional = true }

# For Benchmarking.
criterion = { workspace = true, features = ["html_reports"], optional = true }
rand_core = { workspace = true, features = ["std"], optional = true }
getrandom = { workspace = true, features = ["js"] }

[dev-dependencies]
rand_core = { workspace = true, features = ["std"] }
rand = { workspace = true }
serde_json = { workspace = true, default-features = false, features = ["alloc"] }

[features]
benchmarking = ["dep:criterion", "dep:rand_core"]
parallel = ["dep:rayon"]

[[bench]]
name = "benches"
harness = false
