[package]
name = "group"
version = "0.1.0"
edition = "2021"
license = "CC-BY-NC-ND-4.0"

[dependencies]
crypto-bigint = { workspace = true, features = ["serde"], default-features = false }
serde = { workspace = true, features = ["derive"] }
subtle = { workspace = true, features = ["const-generics"] }
thiserror = { workspace = true }
k256 = { workspace = true, features = ["arithmetic", "critical-section", "precomputed-tables", "serde", "hash2curve", "alloc"], default-features = false }
p256 = { workspace = true, features = ["arithmetic", "serde", "hash2curve", "alloc"], default-features = false }
curve25519-dalek = { workspace = true, features = ["serde", "digest", "group"], default-features = false }
hash2curve = { workspace = true }
sha2 = { workspace = true }
sha3 = { workspace = true }
itertools = { workspace = true }
rayon = { workspace = true, optional = true }
rand_chacha = { workspace = true, default-features = false }
rand_core = { workspace = true }
getrandom = { workspace = true, optional = true }
serde_json = { workspace = true, default-features = false, features = ["alloc"] }

# For Benchmarking.
criterion = { workspace = true, default-features = false, features = ["html_reports", "cargo_bench_support", "rayon"], optional = true }

[dev-dependencies]
k256 = { workspace = true, features = ["arithmetic", "critical-section", "precomputed-tables", "serde", "hash2curve", "alloc", "ecdsa"], default-features = false }
rand = { workspace = true }
getrandom = { workspace = true }
rand_core = { workspace = true, features = ["os_rng"] }
serde_json = { workspace = true, default-features = false, features = ["alloc"] }

[features]
test_helpers = []
os_rng = ["dep:getrandom", "rand_core/os_rng"]
wasm_js = ["os_rng", "getrandom/wasm_js"]
benchmarking = ["dep:criterion", "rand_core/std"]
parallel = ["dep:rayon"]

[[bench]]
name = "benches"
harness = false
