[package]
name = "homomorphic_encryption"
version = "0.1.0"
edition = "2021"
license = "CC-BY-NC-ND-4.0"

[dependencies]
crypto-bigint = { workspace = true }
serde = { workspace = true, features = ["derive"] }
group = { path = "../group" }
mpc = { path = "../mpc" }
thiserror = { workspace = true }

# for test_helpers feature
rstest = { workspace = true, optional = true }
criterion = { workspace = true, default-features = false, features = ["html_reports", "cargo_bench_support", "rayon"], optional = true }
rayon = { workspace = true, optional = true }

[dev-dependencies]
rstest = { workspace = true }
group = { path = "../group", features = ["os_rng"] }

[features]
test_helpers = ["group/os_rng", "dep:rayon", "dep:rstest", "dep:criterion",]
