[package]
name = "mpc"
version = "0.1.0"
edition = "2021"
license = "CC-BY-NC-ND-4.0"

[dependencies]
crypto-bigint = { workspace = true, features = ["rand_core", "serde"], default-features = false }
gcd = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, default-features = false, features = ["alloc"] }
group = { path = "../group" }
commitment = { path = "../commitment" }
thiserror = "1.0"
itertools = { workspace = true }
rand_core = { workspace = true, features = ["std"], optional = true }
getrandom = { workspace = true, features = ["js"] }
rand = { workspace = true }
rstest = { workspace = true, optional = true }
rayon = { workspace = true, optional = true }
criterion = { workspace = true, features = ["html_reports"], optional = true }

[dev-dependencies]
rand_core = { workspace = true, features = ["std"] }
rstest = { workspace = true }
rand = { workspace = true, features = ["std"] }
criterion = { workspace = true, features = ["html_reports"] }

[features]
default = []
test_helpers = ["dep:rand_core", "rand/std", "dep:rstest", "dep:criterion"]
parallel = ["dep:rayon"]
