[package]
name = "mpc"
version = "0.1.0"
edition = "2021"
license = "CC-BY-NC-ND-4.0"

[dependencies]
crypto-bigint = { workspace = true, features = ["serde"], default-features = false }
gcd = { workspace = true }
merlin = { workspace = true, default-features = false }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, default-features = false, features = ["alloc"] }
group = { path = "../group" }
commitment = { path = "../commitment" }
thiserror = "2.0"
itertools = { workspace = true }
rand = { workspace = true, default-features = false,  features = ["alloc"] }
rstest = { workspace = true, optional = true }
rayon = { workspace = true, optional = true }
criterion = { workspace = true, default-features = false, features = ["html_reports", "cargo_bench_support", "rayon"], optional = true }
rand_chacha = { workspace = true, default-features = false }
bcs.workspace = true

[dev-dependencies]
rstest = { workspace = true }
group = { path = "../group", features = ["os_rng"] }
criterion = { workspace = true, features = ["html_reports"] }

[features]
default = []
test_helpers = ["group/os_rng", "dep:rstest", "dep:criterion"]
parallel = ["dep:rayon"]
