[package]
name = "tiresias"
version = "0.2.0"
edition = "2021"
license = "CC-BY-NC-ND-4.0"

[dependencies]
group = { path = "../group" }
homomorphic_encryption = { path = "../homomorphic-encryption" }
mpc = { path = "../mpc" }
crypto-bigint = { workspace = true, features = ["serde", "alloc"], default-features = false }
merlin = { workspace = true, default-features = false }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
subtle = { workspace = true, features = ["const-generics"] }
crypto-primes = { workspace = true, default-features = false }

rayon = { workspace = true, optional = true }

# For benchmarking
criterion = { workspace = true, default-features = false, features = ["html_reports", "cargo_bench_support", "rayon"], optional = true }
rand = { workspace = true, default-features = false, optional = true }
rstest = { workspace = true, optional = true }

[dev-dependencies]
rstest = { workspace = true }
group = { path = "../group", features = ["os_rng"] }
mpc = { path = "../mpc", features = ["test_helpers"] }
homomorphic_encryption = { path = "../homomorphic-encryption", features = ["test_helpers"] }

[features]
default = []
parallel = ["dep:rayon", "mpc/parallel"]

# These features are for internal-use only (for benchmarking & tests) and exists due to
# limitations of benchmarking non-public functions, and exposing test functions in Rust.
# There will be no SemVer support for these features.
benchmarking = ["dep:criterion", "parallel", "test_helpers"]
test_helpers = ["dep:rstest", "group/os_rng", "mpc/test_helpers", "dep:rand"]

[[bench]]
name = "benches"
harness = false
